<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.proyecto.facilgimapp.ui.auth.LoginFragment"
        android:label="@string/facilgimapp"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Register -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.proyecto.facilgimapp.ui.auth.RegisterFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <!-- Workout list -->
    <fragment
        android:id="@+id/workoutsFragment"
        android:name="com.proyecto.facilgimapp.ui.workout.WorkoutsFragment"
        android:label="@string/entrenamientos"
        tools:layout="@layout/fragment_workouts">
        <action
            android:id="@+id/action_workoutsFragment_to_workoutDetailFragment"
            app:destination="@id/workoutDetailFragment">
            <argument
                android:name="workoutId"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_workoutsFragment_to_newWorkoutFragment"
            app:destination="@id/newWorkoutFragment" />
    </fragment>

    <!-- New workout -->
    <fragment
        android:id="@+id/newWorkoutFragment"
        android:name="com.proyecto.facilgimapp.ui.workout.NewWorkoutFragment"
        android:label="@string/nuevo_entrenamiento"
        tools:layout="@layout/fragment_new_workout">
        <action
            android:id="@+id/action_newWorkoutFragment_to_typeListFragment"
            app:destination="@id/typeListFragment" />
        <action
            android:id="@+id/action_newWorkoutFragment_to_workoutSessionFragment"
            app:destination="@id/workoutSessionFragment">
            <argument
                android:name="newWorkoutDTO"
                app:argType="com.proyecto.facilgimapp.model.dto.EntrenamientoDTO" />
            <argument
                android:name="exerciseIds"
                app:argType="integer[]" />
        </action>
    </fragment>

    <!-- Workout session -->
    <fragment
        android:id="@+id/workoutSessionFragment"
        android:name="com.proyecto.facilgimapp.ui.workout.WorkoutSessionFragment"
        android:label="@string/session"
        tools:layout="@layout/fragment_workout_session">
        <argument
            android:name="newWorkoutDTO"
            app:argType="com.proyecto.facilgimapp.model.dto.EntrenamientoDTO" />
        <argument
            android:name="exerciseIds"
            app:argType="integer[]" />
    </fragment>

    <!-- Workout detail -->
    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.proyecto.facilgimapp.ui.workout.WorkoutDetailFragment"
        android:label="@string/detalle_entrenamiento"
        tools:layout="@layout/fragment_workout_detail">
        <argument
            android:name="workoutId"
            app:argType="integer" />
    </fragment>

    <!-- Exercises -->
    <fragment
        android:id="@+id/exercisesFragment"
        android:name="com.proyecto.facilgimapp.ui.exercises.ExercisesFragment"
        android:label="@string/ejercicios"
        tools:layout="@layout/fragment_exercises">
        <action
            android:id="@+id/action_exercisesFragment_to_workoutSessionFragment"
            app:destination="@id/workoutSessionFragment">
            <argument
                android:name="exerciseId"
                app:argType="integer" />
        </action>
    </fragment>

    <!-- User profile -->
    <fragment
        android:id="@+id/userFragment"
        android:name="com.proyecto.facilgimapp.ui.user.UserFragment"
        android:label="@string/usuario"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/action_userFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_userFragment_to_adminUserFragment"
            app:destination="@id/adminUserFragment" />
        <action
            android:id="@+id/action_userFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <!-- Change Password -->
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.proyecto.facilgimapp.ui.user.ChangePasswordFragment"
        android:label="@string/option_change_password"
        tools:layout="@layout/fragment_security_settings" />

    <!-- Admin: manage users -->
    <fragment
        android:id="@+id/adminUserFragment"
        android:name="com.proyecto.facilgimapp.ui.admin.AdminUsersFragment"
        android:label="@string/option_manage_users"
        tools:layout="@layout/fragment_admin_users" />

    <!-- Type list -->
    <fragment
        android:id="@+id/typeListFragment"
        android:name="com.proyecto.facilgimapp.ui.types.TypeListFragment"
        android:label="@string/tipos"
        tools:layout="@layout/fragment_type_list" />

    <!-- Home (bottom nav) -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.proyecto.facilgimapp.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />
</navigation>
